Bump version to flyway-10.3.0
Please see the GH release for the release notes

Closes #3810: Mention Spanner size limit

allow environment plugins to use models instead of hashmaps

remove unused database extension classes

drop services and queues in sql server

Closes #3806: Correct HSQLDB support message and increase driver support to 2.7.2